# libwpd

./: .gitignore  CREDITS  Makefile  Makefile.in  NEWS  README  aclocal.m4  astyle.options  config.h  config.h.in  config.status  configure  configure.ac  libtool  libwpd-0.10.pc
autom4te.cache/: output.0  output.2  output.3  requests  traces.0  traces.1  traces.2
inc/: Makefile  Makefile.in
inc/libwpd/: Makefile  Makefile.am  Makefile.in  WPDExtractionOptions.h  WPDocument.h
src/conv/html/: Makefile.am  WPDHTMLTextGenerator.cpp  WPDHTMLTextGenerator.h  wpd2html.cpp
src/fuzz/: Makefile.am  wpdfuzzer.cpp
src/lib/: Makefile.am  WP1BottomMarginGroup.h  WP1CenterTextGroup.h  WP1ContentListener.cpp  WP1ContentListener.h  WP1ExtendedCharacterGroup.h  WP1FileStructure.cpp  WP1FileStructure.h  WP1FixedLengthGroup.h  WP1FlushRightGroup.h  WP1FontIdGroup.h  WP1FootnoteEndnoteGroup.cpp  WP1FootnoteEndnoteGroup.h  WP1HeaderFooterGroup.cpp  WP1HeaderFooterGroup.h  WP1Heuristics.cpp  WP1Heuristics.h  WP1JustificationGroup.h  WP1LeftIndentGroup.h  WP1LeftRightIndentGroup.h  WP1Listener.h  WP1MarginReleaseGroup.h  WP1MarginResetGroup.h  WP1Parser.cpp  WP1Parser.h  WP1Part.cpp  WP1PictureGroup.h  WP1PointSizeGroup.h  WP1SetTabsGroup.h  WP1SpacingResetGroup.h  WP1StylesListener.cpp  WP1StylesListener.h  WP1SubDocument.cpp  WP1SuppressPageCharacteristicsGroup.h  WP1TopMarginGroup.h  WP1UnsupportedFixedLengthGroup.h  WP1UnsupportedVariableLengthGroup.h  WP1VariableLengthGroup.h  WP3AttributeGroup.h  WP3ContentListener.cpp  (+192 more)
tests/: SANYIG01.C3P  mangala_map.json
(+2 files in other folders)
